fix z-index js

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -287,6 +287,7 @@ body {
    width: 100vw;
    height: 50px;
    margin-left: -20px;
+   z-index: 100000;
 
    background: #eeee;
  }
